--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
+    "nanoid": "^3.1.23",
     "validator": "^13.6.0"
   },
   "license": "MIT",
