--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
-    "nanoid": "^3.1.23",
+    "shortid": "^2.2.16",
     "validator": "^13.6.0"
   },
   "license": "MIT",
