--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
-    "shortid": "^2.2.16",
-    "validator": "^13.6.0"
+    "shortid": "^2.2.16"
   },
   "license": "MIT",
   "devDependencies": {
